[package]
name = "pico-wave-gen"
version = "0.1.0"
license = "CC BY-NC-SA 4.0"
authors = [ "Florian Beck <info@florian-beck.de>" ]
edition = "2021"

[dependencies]
# Core dependencies
rp-pico = "0.7"
fugit = "0.3"

# PIO ASM dependencies
pio-proc = "0.2"
pio = "0.2"

# Dependencies for debug probe
defmt = "0.3.2"
defmt-rtt = "0.3.2" # Older version to prevent errors from version mismatch
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = "s"
codegen-units = 3

[profile.release]
opt-level = 3
codegen-units = 1
# lto = true
# strip = true
panic = "abort"