[package]
name = "pico-wave-gen"
version = "0.1.0"
license = "CC BY-NC-SA 4.0"
authors = [ "Florian Beck <info@florian-beck.de>" ]
edition = "2021"

[features]
default = ["pico"]
pico = []
serial = []

[dependencies]
# Core dependencies
# inline-asm feature will be enabled by default from version 0.8
# cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m = { version = "0.7" }
rp-pico = "0.7"
fugit = "0.3"

# PIO ASM dependencies
pio-proc = "0.2"
pio = "0.2"

# Data serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

# Dependencies for debug probe
defmt = "0.3.2"

[profile.dev]
opt-level = "s"
codegen-units = 3

[profile.release]
opt-level = 3
codegen-units = 1
# lto = true
# strip = true
panic = "abort"