[package]
name = "pico-wave-gen"
version = "0.1.0"
license = "CC BY-NC-SA 4.0"
authors = [ "Florian Beck <info@florian-beck.de>" ]
edition = "2021"

[features]
default = ["pico"]
pico = [
  "dep:cortex-m",
  "dep:rp-pico",
  "dep:fugit",
  "dep:pio-proc",
  "dep:pio",
  "dep:defmt"
]
serial = ["dep:serde", "dep:serde-json-core"]

[dependencies]
# Core dependencies
# inline-asm feature will be enabled by default from version 0.8
# cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m = { version = "0.7", optional = true }
rp-pico = { version = "0.7", optional = true }
fugit = { version = "0.3", optional = true }

# PIO ASM dependencies
pio-proc = { version = "0.2", optional = true }
pio = { version = "0.2", optional = true }

# Data serialization
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde-json-core = { version = "0.5", optional = true }

# Dependencies for debug probe
defmt = { version = "0.3.2", optional = true }

[profile.dev]
opt-level = "s"
codegen-units = 3

[profile.release]
opt-level = 3
codegen-units = 1
# lto = true
# strip = true
panic = "abort"